<resources>
    <string name="app_name">Calculator</string>
    <string name="op_Clear">C</string>
    <string name="op_sing">Back</string>
    <string name="op_Mod">%</string>
    <string name="op_Div">/</string>
    <string name="op_Mul">*</string>
    <string name="op_Minus">-</string>
    <string name="op_Plus">+</string>
    <string name="op_Equal">=</string>

        <string name="digit_1">1</string>
        <string name="digit_2">2</string>
        <string name="digit_3">3</string>


        <string name="digit_4">4</string>
        <string name="digit_5">5</string>
        <string name="digit_6">6</string>
        <string name="digit_7">7</string>
        <string name="digit_8">8</string>
        <string name="digit_9">9</string>
        <string name="digit_0">0</string>
        <string name="dot">.</string>
        <string name="OtherExp">Exp</string>

    <string name="start">0</string>
</resources>